# MOGBGSub

./: .gitignore  CMakeLists.txt
classifiers/: classifier_MAAE  classifier_MAAE_400-4  classifier_MAAE_400-6  classifier_MAAE_400-7  classifier_acc  classifier_acc_400-4  classifier_acc_400-6  classifier_acc_400-7
src/: BGSub.cpp  Evaluator.cpp  EvaluatorExtract.cpp  EvaluatorGT.cpp  fern_based_classifier.cc  fern_based_classifier.h  ferns.cc  ferns.h
