cmake_minimum_required(VERSION 2.8)
SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -O0" )
project( MOGBGSub )
find_package( OpenCV REQUIRED )
add_executable( BGSub ../src/BGSub.cpp )
target_link_libraries( BGSub ${OpenCV_LIBS} )
#find_package( ZLIB REQUIRED )
#add_library( lib ../src/ferns.cc ../src/fern_based_classifier.cc)
#add_executable( FisheyeFerns ../src/FisheyeFerns.cpp )
#add_executable( DetectClassify ../src/DetectClassify.cpp )
#add_executable( HOGFerns ../src/HogFerns.cpp )
#add_executable( NegHard ../src/NegHard.cpp )
#add_executable( FullSystem ../src/FullSystem.cpp )
#add_executable( LKTrack ../src/LKTrackHOG.cpp )
#target_link_libraries( FisheyeFerns ${OpenCV_LIBS} )
#target_link_libraries( FisheyeFerns lib )
#target_link_libraries( FisheyeFerns ${ZLIB_LIBRARIES} )
#target_link_libraries( DetectClassify ${OpenCV_LIBS} )
#target_link_libraries( DetectClassify lib )
#target_link_libraries( DetectClassify ${ZLIB_LIBRARIES} )
#target_link_libraries( HOGFerns ${OpenCV_LIBS} )
#target_link_libraries( HOGFerns lib )
#target_link_libraries( HOGFerns ${ZLIB_LIBRARIES} )
#target_link_libraries( NegHard ${OpenCV_LIBS} )
#target_link_libraries( NegHard lib )
#target_link_libraries( NegHard ${ZLIB_LIBRARIES} )
#target_link_libraries( FullSystem ${OpenCV_LIBS} )
#target_link_libraries( FullSystem lib )
#target_link_libraries( FullSystem ${ZLIB_LIBRARIES} )
#target_link_libraries( LKTrack ${OpenCV_LIBS} )
