cmake_minimum_required(VERSION 2.8)
SET ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -O0" )
set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
project( MOGBGSub )
find_package( OpenCV REQUIRED )
message(${OpenCV_INCLUDE_DIRS})
message(${OpenCV_LIBS})
add_executable( BGSub ../src/BGSub.cpp )
add_executable( Evaluator ../src/Evaluator.cpp)
add_executable( EvaluatorGT ../src/EvaluatorGT.cpp)
add_executable( EvaluatorExtract ../src/EvaluatorExtract.cpp)
find_package( ZLIB REQUIRED )
add_library( lib ../src/ferns.cc ../src/fern_based_classifier.cc)
target_link_libraries( BGSub ${OpenCV_LIBS} )
target_link_libraries( BGSub lib )
target_link_libraries( BGSub ${ZLIB_LIBRARIES} )
target_link_libraries( Evaluator ${OpenCV_LIBS} )
target_link_libraries( EvaluatorExtract ${OpenCV_LIBS} )
target_link_libraries( EvaluatorGT ${OpenCV_LIBS} )
target_link_libraries( EvaluatorGT lib )
target_link_libraries( EvaluatorGT ${ZLIB_LIBRARIES} )
#add_executable( FisheyeFerns ../src/FisheyeFerns.cpp )
#add_executable( DetectClassify ../src/DetectClassify.cpp )
#add_executable( HOGFerns ../src/HogFerns.cpp )
#add_executable( NegHard ../src/NegHard.cpp )
#add_executable( FullSystem ../src/FullSystem.cpp )
#add_executable( LKTrack ../src/LKTrackHOG.cpp )
#target_link_libraries( FisheyeFerns ${OpenCV_LIBS} )
#target_link_libraries( FisheyeFerns lib )
#target_link_libraries( FisheyeFerns ${ZLIB_LIBRARIES} )
#target_link_libraries( DetectClassify ${OpenCV_LIBS} )
#target_link_libraries( DetectClassify lib )
#target_link_libraries( DetectClassify ${ZLIB_LIBRARIES} )
#target_link_libraries( HOGFerns ${OpenCV_LIBS} )
#target_link_libraries( HOGFerns lib )
#target_link_libraries( HOGFerns ${ZLIB_LIBRARIES} )
#target_link_libraries( NegHard ${OpenCV_LIBS} )
#target_link_libraries( NegHard lib )
#target_link_libraries( NegHard ${ZLIB_LIBRARIES} )
#target_link_libraries( FullSystem ${OpenCV_LIBS} )
#target_link_libraries( FullSystem lib )
#target_link_libraries( FullSystem ${ZLIB_LIBRARIES} )
#target_link_libraries( LKTrack ${OpenCV_LIBS} )
